# text-cpp-sandbox

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt
src/: Collection.h  TextLayout.cpp  TextLayout.h  main.cpp  vectors.h
src/graphics/: Collection.cpp  Mesh.h  SVG.cpp
src/text/: Font.h  Glyph.cpp  Glyph_ttf2mesh.cpp  TextLayout.cpp  WOFF2.cpp
src/utils/: Compression.cpp  Compression.h  File.h  FilePack.cpp  Math.h
